<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.Onboarding.SignUpScreen.SignUpActivity">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mono_black_5">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_15sdp">

                    <ImageButton
                        android:id="@+id/ib_back_button"
                        android:layout_width="@dimen/_39sdp"
                        android:layout_height="@dimen/_37sdp"
                        android:background="@drawable/ic_back_arrow"
                        android:contentDescription="@string/back_button"
                        android:padding="@dimen/_5sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <carbon.widget.RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_40sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ib_back_button">

                        <TextView
                            android:id="@+id/tv_header1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/futura_std_condensed_extra_bd"
                            android:lineSpacingExtra="2sp"
                            android:singleLine="true"
                            android:text="@string/sign_up_for_list_heading"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_25ssp"
                            android:translationY="-1.2sp" />

                        <TextView
                            android:id="@+id/tv_sub_header"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_header1"
                            android:layout_marginTop="@dimen/_3sdp"
                            android:fontFamily="@font/futura_std_condensed"
                            android:lineSpacingExtra="4sp"
                            android:singleLine="false"
                            android:text="@string/sign_up_below_heading_message"
                            android:textAllCaps="true"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_17ssp"
                            android:translationY="-2.2sp" />

                        <carbon.widget.EditText
                            android:id="@+id/signup_et_email"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_52sdp"
                            android:layout_below="@+id/tv_sub_header"
                            android:layout_marginTop="@dimen/_29sdp"
                            android:background="@color/mono_slate_10"
                            android:drawableStart="@drawable/email"
                            android:drawablePadding="@dimen/_10sdp"
                            android:fontFamily="@font/futura_std_condensed"
                            android:hint="@string/email_address_hint"
                            android:inputType="textEmailAddress"
                            android:lineSpacingExtra="4sp"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:paddingLeft="@dimen/_8sdp"
                            android:paddingRight="@dimen/_8sdp"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/mono_grey_60"
                            android:textCursorDrawable="@null"
                            android:textSize="@dimen/_14ssp"
                            android:translationY="-2.2sp"
                            app:carbon_backgroundTint="@color/mono_slate_10"
                            app:carbon_cornerRadius="@dimen/_11sdp"
                            app:carbon_cursorColor="@color/red"
                            app:carbon_elevation="@dimen/_2sdp" />

                        <TextView
                            android:id="@+id/errorEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/error_email_message"
                            android:layout_below="@id/signup_et_email"
                            android:textColor="@color/red"
                            android:visibility="gone"/>

                        <carbon.widget.RelativeLayout
                            android:id="@+id/signup_rl_password"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_52sdp"
                            android:layout_below="@+id/signup_et_email"
                            android:layout_marginTop="@dimen/_23sdp"
                            app:carbon_cornerRadius="@dimen/_11sdp"
                            app:carbon_elevation="@dimen/_2sdp">

                            <carbon.widget.EditText
                                android:id="@+id/signup_et_password"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/mono_slate_10"
                                android:drawableStart="@drawable/password"
                                android:drawablePadding="@dimen/_10sdp"
                                android:fontFamily="@font/futura_std_condensed"
                                android:hint="@string/password_hint"
                                android:inputType="textPassword"
                                android:lineSpacingExtra="4sp"
                                android:maxLines="1"
                                android:maxLength="40"
                                android:paddingStart="@dimen/_8sdp"
                                android:paddingEnd="@dimen/_20sdp"
                                android:singleLine="true"
                                android:textColor="@color/white"
                                android:textColorHint="@color/mono_grey_60"
                                android:textCursorDrawable="@null"
                                android:textSize="@dimen/_14ssp"
                                app:carbon_backgroundTint="@color/mono_slate_10"
                                app:carbon_cornerRadius="@dimen/_11sdp"
                                app:carbon_cursorColor="@color/red" />

                            <ImageView
                                android:id="@+id/ib_password_icon"
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="@dimen/_8sdp"
                                android:src="@drawable/eye_slash"
                                android:contentDescription="@string/password_icon_content_description" />
                        </carbon.widget.RelativeLayout>

                        <TextView
                            android:id="@+id/errorPassword"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password_error_message"
                            android:layout_below="@id/signup_rl_password"
                            android:textColor="@color/red"
                            android:visibility="gone"/>

                        <CheckBox
                            android:id="@+id/cb_signup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/signup_rl_password"
                            android:layout_alignParentStart="true"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:buttonTint="@color/red"
                            android:drawablePadding="@dimen/_5sdp"
                            android:fontFamily="@font/sf_pro_display_regular"
                            android:lineSpacingExtra="5sp"
                            android:scaleX="1"
                            android:scaleY="1"
                            android:text="@string/sign_up_checkbox_message"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp"
                            android:translationY="-2.74sp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/btn_join_us"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_50sdp"
                            android:layout_below="@+id/cb_signup"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:fontFamily="@font/futura_std_condensed_extra_bd"
                            android:lineSpacingExtra="4sp"
                            android:singleLine="true"
                            android:text="@string/join_us"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_10ssp"
                            android:visibility="visible"
                            app:cornerRadius="@dimen/_6sdp"
                            app:elevation="@dimen/_5sdp"
                            app:strokeColor="@color/red"
                            app:strokeWidth="1dp" />

                        <TextView
                            android:id="@+id/tv_sub_header2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/btn_join_us"
                            android:layout_marginTop="@dimen/_18sdp"
                            android:fontFamily="@font/sf_pro_display_regular"
                            android:gravity="center"
                            android:lineSpacingExtra="4sp"
                            android:singleLine="false"
                            android:textColorHighlight="@color/grey"
                            android:textColorLink="@color/grey"
                            android:text="@string/privacy_policy_tnc_message"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/_10ssp"
                            android:translationY="-2.2sp" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/tv_login"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_sub_header2"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginBottom="@dimen/_8sdp"
                            android:fontFamily="@font/sf_pro_display_regular"
                            android:includeFontPadding="false"
                            android:lineSpacingExtra="5sp"
                            android:singleLine="true"
                            android:text="@string/have_an_account_login"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_12ssp"
                            android:translationY="-2.74sp" />

                    </carbon.widget.RelativeLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/sp_loading"
            style="@style/SpinKitView.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:SpinKit_Color="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>